12988
Trying the new Scala compiler for Java generic support, I am getting a
reproducable internal compiler error.  The code being compiled is not
correct nor has it been moved over to specify types.

I am using the Commons Collections 3.2 jar file from
http://commons.apache.org/downloads/download_collections.cgi .  I
can't reproduce the error with less then two files.

{code}
> ~/src/scala-2.6.1.13642.20080102-034532/bin/scalac -classpath commons-collections-3.2.jar *scala
Hashtable.scala:6: error: class Hashtable takes type parameters
class Hashtable[K,E](override val underlying : java.util.Hashtable)
                                                         ^
SynchronizedLRUMap.scala:6: error: trait Map takes type parameters
  (override val underlying : java.util.Map)
                                       ^
Exception in thread "main" java.lang.ArrayIndexOutOfBoundsException: -12
        at scala.tools.nsc.util.HashSet.addEntry(HashSet.scala:31)
        at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$getParts$$1$$1.apply(Typers.scala:3418)
        at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$getParts$$1$$1.apply(Typers.scala:3417)
        at scala.List.foreach(List.scala:753)
        at scala.tools.nsc.typechecker.Typers$$Typer.getParts$$1(Typers.scala:3417)
        at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$getParts$$1$$2.apply(Typers.scala:3420)
        at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$getParts$$1$$2.apply(Typers.scala:3420)
        at scala.List.foreach(List.scala:753)
        at scala.tools.nsc.typechecker.Typers$$Typer.getParts$$1(Typers.scala:3420)
        at scala.tools.nsc.typechecker.Typers$$Typer.implicitsOfType$$1(Typers.scala:3433)
        at scala.tools.nsc.typechecker.Typers$$Typer.inferImplicit(Typers.scala:3446)
        at scala.tools.nsc.typechecker.Typers$$Typer.scala$$tools$$nsc$$typechecker$$Typers$$Typer$$$$inferView(Typers.scala:172)
        at scala.tools.nsc.typechecker.Typers$$Typer$$$$anon$$2.isCoercible(Typers.scala:153)
        at scala.tools.nsc.typechecker.Infer$$Inferencer.isCompatible(Infer.scala:377)
        at scala.tools.nsc.typechecker.Infer$$Inferencer$$$$anonfun$$methTypeArgs$$3.apply(Infer.scala:499)
        at scala.tools.nsc.typechecker.Infer$$Inferencer$$$$anonfun$$methTypeArgs$$3.apply(Infer.scala:498)
        at scala.List$$.map2(List.scala:277)
        at scala.tools.nsc.typechecker.Infer$$Inferencer.methTypeArgs(Infer.scala:498)
        at scala.tools.nsc.typechecker.Infer$$Inferencer.inferMethodInstance(Infer.scala:828)
        at scala.tools.nsc.typechecker.Typers$$Typer.doTypedApply(Typers.scala:1661)
        at scala.tools.nsc.typechecker.Typers$$Typer.typedApply$$1(Typers.scala:2454)
        at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:3043)
        at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3146)
        at scala.tools.nsc.typechecker.Typers$$Typer.typedArg(Typers.scala:1539)
        at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$typedArgs$$1.apply(Typers.scala:1542)
        at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$typedArgs$$1.apply(Typers.scala:1542)
        at scala.List$$.loop$$1(List.scala:244)
        at scala.List$$.mapConserve(List.scala:261)
        at scala.tools.nsc.typechecker.Typers$$Typer.typedArgs(Typers.scala:1542)        at scala.tools.nsc.typechecker.Typers$$Typer.doTypedApply(Typers.scala:1590)
        at scala.tools.nsc.typechecker.Typers$$Typer.typedApply$$1(Typers.scala:2454)
        at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:3043)
        at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3146)
        at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3183)
        at scala.tools.nsc.typechecker.Typers$$Typer.typedStat$$1(Typers.scala:1504)
        at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$21.apply(Typers.scala:1533)
        at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$21.apply(Typers.scala:1533)
        at scala.List$$.loop$$1(List.scala:244)
        at scala.List$$.mapConserve(List.scala:261)
        at scala.tools.nsc.typechecker.Typers$$Typer.typedStats(Typers.scala:1533)
        at scala.tools.nsc.typechecker.Typers$$Typer.typedBlock(Typers.scala:1363)
        at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:2908)
        at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3146)
        at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3183)
        at scala.tools.nsc.typechecker.Typers$$Typer.typedDefDef(Typers.scala:1298)
        at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:2884)
        at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3146)
        at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3183)
        at scala.tools.nsc.typechecker.Typers$$Typer.typedStat$$1(Typers.scala:1504)
        at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$21.apply(Typers.scala:1533)
        at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$21.apply(Typers.scala:1533)
        at scala.List$$.loop$$1(List.scala:244)
        at scala.List$$.mapConserve(List.scala:261)
        at scala.List$$.loop$$1(List.scala:248)
        at scala.List$$.mapConserve(List.scala:261)
        at scala.List$$.loop$$1(List.scala:248)
        at scala.List$$.mapConserve(List.scala:261)
        at scala.tools.nsc.typechecker.Typers$$Typer.typedStats(Typers.scala:1533)
        at scala.tools.nsc.typechecker.Typers$$Typer.typedTemplate(Typers.scala:1151)
        at scala.tools.nsc.typechecker.Typers$$Typer.typedClassDef(Typers.scala:1023)
        at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:2875)
        at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3146)
        at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3183)
        at scala.tools.nsc.typechecker.Typers$$Typer.typedStat$$1(Typers.scala:1504)
        at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$21.apply(Typers.scala:1533)
        at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$21.apply(Typers.scala:1533)
        at scala.List$$.loop$$1(List.scala:244)
        at scala.List$$.mapConserve(List.scala:261)
        at scala.tools.nsc.typechecker.Typers$$Typer.typedStats(Typers.scala:1533)
        at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:2871)
        at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3146)
        at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3183)
        at scala.tools.nsc.typechecker.Typers$$Typer.typedStat$$1(Typers.scala:1504)
        at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$21.apply(Typers.scala:1533)
        at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$21.apply(Typers.scala:1533)
        at scala.List$$.loop$$1(List.scala:244)
        at scala.List$$.mapConserve(List.scala:261)
        at scala.tools.nsc.typechecker.Typers$$Typer.typedStats(Typers.scala:1533)
        at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:2871)
        at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3146)
        at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3183)
        at scala.tools.nsc.typechecker.Typers$$Typer.typedStat$$1(Typers.scala:1504)
        at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$21.apply(Typers.scala:1533)
        at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$21.apply(Typers.scala:1533)
        at scala.List$$.loop$$1(List.scala:244)
        at scala.List$$.mapConserve(List.scala:261)
        at scala.tools.nsc.typechecker.Typers$$Typer.typedStats(Typers.scala:1533)
        at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:2871)
        at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3146)
        at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3183)
        at scala.tools.nsc.typechecker.Typers$$Typer.typedStat$$1(Typers.scala:1504)
        at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$21.apply(Typers.scala:1533)
        at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$21.apply(Typers.scala:1533)
        at scala.List$$.loop$$1(List.scala:244)
        at scala.List$$.mapConserve(List.scala:261)
        at scala.tools.nsc.typechecker.Typers$$Typer.typedStats(Typers.scala:1533)
        at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:2871)
        at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3146)
        at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3183)
        at scala.tools.nsc.typechecker.Analyzer$$typerFactory$$$$anon$$2.apply(Analyzer.scala:40)
        at scala.tools.nsc.Global$$GlobalPhase.applyPhase(Global.scala:245)
        at scala.tools.nsc.Global$$GlobalPhase$$$$anonfun$$run$$1.apply(Global.scala:233)
        at scala.tools.nsc.Global$$GlobalPhase$$$$anonfun$$run$$1.apply(Global.scala:233)
        at scala.Iterator$$class.foreach(Iterator.scala:376)
        at scala.collection.mutable.ListBuffer$$$$anon$$1.foreach(ListBuffer.scala:255)
        at scala.tools.nsc.Global$$GlobalPhase.run(Global.scala:233)
        at scala.tools.nsc.Global$$Run.compileSources(Global.scala:529)
        at scala.tools.nsc.Global$$Run.compile(Global.scala:613)
        at scala.tools.nsc.Main$$.process(Main.scala:86)
        at scala.tools.nsc.Main$$.main(Main.scala:107)
        at scala.tools.nsc.Main.main(Main.scala)
{code}
